--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 .image-container {
-    width: 650px;
+    width: 480px;
     height: 100vh;
 }
 
@@ -19,10 +19,41 @@ main {
     display: flex;
 }
 
-.form-container {
-    margin-left: 40px;
+.flex-container {
+    display: flex;
+    gap: 50px;
 }
 
 .para1st {
+    width: 520px;
     margin-top: 100px;
+    margin-bottom: 20px;
+    font-size: 17px;
+}
+
+.para2nd {
+    margin-bottom: 50px;
+    font-size: 16px;
+}
+
+.para3rd {
+    margin-bottom: 25px;
+}
+
+input {
+    margin-bottom: 20px;
+    width: 270px;
+    height: 28px;
+    appearance: none;
+}
+
+button {
+    margin-top: 30px;
+    margin-bottom: 20px;
+    width: 180px;
+    height: 40px;
+    border: none;
+    border-radius: 5px;
+    background-color: blue;
+    color: white;
 }
